<resources>
    <string name="app_name">Pasta Sepeti</string>
    <string-array name="iller">
        <item>value1</item>
        <item>value2</item>
    </string-array>
    <string-array name="userInfo">
    </string-array>
    <string-array name="adresTipleri">
        <item>Ev</item>
        <item>İş</item>
        <item>Okul</item>
        <item>Yurt</item>
        <item>Diğer</item>
    </string-array>
    <string name="title_activity_inside">Inside</string>
    <string name="title_anasayfa">Anasayfa</string>
    <string name="title_pastaneler">Pastaneler</string>
    <string name="title_siparisler">Siparişler</string>
    <string name="title_ayarlar">Ayarlar</string>
    <string name="title_urunDetayBaslik">Ürün Detay</string>
    <string name="title_pastanelerBaslik">Size En Yakın Pastaneler</string>
    <string name="title_odemeBaslik">Ödeme</string>
    <string name="title_adresler">Adres Ekle</string>
    <string name="title_sepet">Seçilen Ürünler</string>
    <string name="title_odemeBilgileri">Ödeme Bilgileri</string>
    <string name="btnSepeteEkle">Sepete Ekle</string>
    <string name="title_odenmesiGerekenTutar">Ödemeniz Gereken Tutar</string>
    <string name="title_odemeYontemi">Ödeme Yöntemi Seçin</string>
    <string name="radio_Nakit">Nakit</string>
    <string name="radio_KrediBanka">Kredi/Banka Kartı</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
